--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
 
 <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@1.0.5/destyle.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 
 <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/5b7989b59d.js" crossorigin="anonymous"></script>
