--- a/sample.html
+++ b/sample.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>初めてのHTML</title>
+    <title>1-2 演習問題</title>
 
 <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@1.0.5/destyle.css">
@@ -15,6 +15,35 @@
   </head>
 
   <body>
-    <a href="https://google.jp">Google</a>
+    <header>
+      <h1 class="main_title">サービス紹介</h1>
+    </header>
+    <main>
+
+      <div class="common_inner">
+        <h2 class="common_title">webcamp</h2>
+        <p class="common_text">マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。</p>
+        <a href="#" class="common_link">webサイト</a>
+      </div><!-- /.common_inner -->
+
+      <div class="common_inner">
+        <h2 class="common_title">webcamp pro</h2>
+        <p class="common_text">未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
+        <a href="#" class="common_link">webサイト</a>
+      </div><!-- /.common_inner -->
+
+      <div class="common_inner">
+        <h2 class="common_title">webcamp woman</h2>
+        <p class="common_text">家庭も仕事も頑張りたい主婦・ママ向けの、１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+        <a href="#" class="common_link">webサイト</a>
+      </div><!-- /.common_inner -->
+
+      <div class="common_inner">
+        <h2 class="common_title">webcamp career</h2>
+        <p class="common_text">3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート。</p>
+        <a href="#" class="common_link">webサイト</a>
+      </div><!-- /.common_inner -->
+
+    </main>
   </body>
 </html>
